[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = ""
authors = ["JAMES DIOTTE <james@findanaomly.com>"]
readme = "README.md"
packages = [{include = "mlflow_server"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
gunicorn = "^20.1.0"
querystring-parser = "^1.2.4"
pandas = "^2.0.2"
sqlalchemy = "1.4.46"
alembic = "^1.11.1"
mlflow-skinny = "1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
